Fix homepage in package json to work for localhost

--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "bugs": {
     "url": "https://gitlab.com/academic-technology-brown/wind-turbine-tool/issues"
   },
-  "homepage": "https://gitlab.com/academic-technology-brown/wind-turbine-tool#readme"
+  "homepage": "."
 }
