--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +41,8 @@
   "bugs": {
     "url": "https://github.com/BrownUniversity/wind-turbine-tool/issues"
   },
-  "homepage": "."
+  "homepage": ".",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
